Fixed projects collapse element and some styling
Porjects page now shows correct implementation of the collapse element, how I had originally intended it before running into technical issues. Fixed some styling issues in contact me (button hover was a strange color), about-me, and projects

--- a/src/css/experiences.css
+++ b/src/css/experiences.css
@@ -7,10 +7,6 @@
     font-style: italic;
 }
 
-.Experiences {
-    min-height: 1000px;
-}
-
 .boxBorder {
     border:3px ridge silver;
     border-radius: 15px;
